# PtAnnotator3D

./: LICENSE  README.md  pyproject.toml
src/ptannotator3d/: __init__.py  _ptannotator3d.py  napari.yaml
